@@ -115,6 +115,8 @@ template<class Archive> void Film::load(Archive &ar, const u_int version) {
 	ar & noiseEstimation;
 	ar & haltTime;
 	ar & haltSPP;
+	ar & haltSPP_PixelNormalized;
+	ar & haltSPP_ScreenNormalized;
 	ar & haltNoiseThreshold;
 	ar & haltNoiseThresholdWarmUp;
 	ar & haltNoiseThresholdTestStep;
@@ -193,6 +195,8 @@ template<class Archive> void Film::save(Archive &ar, const u_int version) const 
 	ar & noiseEstimation;
 	ar & haltTime;
 	ar & haltSPP;
+	ar & haltSPP_PixelNormalized;
+	ar & haltSPP_ScreenNormalized;
 	ar & haltNoiseThreshold;
 	ar & haltNoiseThresholdWarmUp;
 	ar & haltNoiseThresholdTestStep;
